syntax = "proto3";

package item;

import "google/protobuf/wrappers.proto";
import "google/api/annotations.proto";

option java_package = "com.github.starter.proto";
option java_multiple_files = false;
option java_outer_classname = "Items";
option go_package = ".;item";

message Item {
  string id = 1;
  string name = 2;
  string description = 3;
  string price = 4;
  string created = 5;
  string action_by = 6;
  string updated = 7;
};

message ItemList {
  repeated Item data = 1;
};

message Params {
  bool completed = 1;
};

message SearchRequest {
    string action_by=1;
    string price=2;
    string created=3;
};

message Status {
  string value = 1;
}

service ItemService {
  rpc getItems(SearchRequest) returns(ItemList) {
    option (google.api.http) = {
        get: "/item.search"
    };
  };
  rpc save(Item) returns(Item) {
    option (google.api.http) = {
      post: "/item.save"
    };
  };
  rpc update(Item) returns(Item){
    option (google.api.http) = {
      post: "/item.update"
    };
  };

  rpc findById(google.protobuf.StringValue) returns(Item) {
    option (google.api.http) = {
        get: "/item.findById"
    };
  };
  rpc delete(google.protobuf.StringValue) returns(google.protobuf.BoolValue) {
    option (google.api.http) = {
        delete: "/item.delete"
    };
  };

  rpc status(Params) returns(Status) {
    option (google.api.http) = {
      get: "/item.status"
    };
  };

}

